--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/node": "^3.1.4",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.5",
+    "pg-connection-string": "^2.6.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
