--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "uuid": "1d3fdbd9-6c42-411c-b47e-81c1aac5593d"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
+    "node": "^18.17.0 || >=20.5.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
